--- a/src/main/resources/themes/default/game_tile.fxml
+++ b/src/main/resources/themes/default/game_tile.fxml
@@ -6,8 +6,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="gameTileRoot" styleClass="game-tile-root"
-      xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.GameTileController">
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="gameTileRoot" focusTraversable="true" onMouseClicked="#onClick"
+      styleClass="game-tile-root" xmlns="http://javafx.com/javafx/8.0.40"
+      fx:controller="com.faforever.client.game.GameTileController">
   <children>
     <StackPane>
       <children>
