--- a/src/main/resources/themes/default/leaderboard.fxml
+++ b/src/main/resources/themes/default/leaderboard.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,26 +12,40 @@
       maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.40"
       fx:controller="com.faforever.client.leaderboard.LeaderboardController">
   <children>
-    <HBox alignment="CENTER_RIGHT">
+    <VBox fx:id="contentPane" VBox.vgrow="ALWAYS">
       <children>
-        <TextField fx:id="searchTextField" promptText="%ladder.searchPrompt"/>
+        <HBox alignment="CENTER_RIGHT">
+          <children>
+            <TextField fx:id="searchTextField" promptText="%ladder.searchPrompt"/>
+          </children>
+          <padding>
+            <Insets bottom="5.0" top="5.0"/>
+          </padding>
+        </HBox>
+        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                   minHeight="0.0" minWidth="0.0">
+          <columns>
+            <TableColumn fx:id="rankColumn" text="Rank"/>
+            <TableColumn fx:id="nameColumn" text="Name"/>
+            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio"/>
+            <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
+            <TableColumn fx:id="ratingColumn" text="Rating"/>
+          </columns>
+          <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+          </columnResizePolicy>
+        </TableView>
       </children>
-      <padding>
-        <Insets bottom="5.0" top="5.0"/>
-      </padding>
-    </HBox>
-    <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0"
-               minWidth="0.0" VBox.vgrow="ALWAYS">
-      <columns>
-        <TableColumn fx:id="rankColumn" text="Rank"/>
-        <TableColumn fx:id="nameColumn" text="Name"/>
-        <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio"/>
-        <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
-        <TableColumn fx:id="ratingColumn" text="Rating"/>
-      </columns>
-      <columnResizePolicy>
-        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-      </columnResizePolicy>
-    </TableView>
+    </VBox>
+    <VBox fx:id="connectionProgressPane" alignment="CENTER" spacing="10.0">
+      <children>
+        <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
+        <Label text="%leaderboard.loading">
+          <VBox.margin>
+            <Insets/>
+          </VBox.margin>
+        </Label>
+      </children>
+    </VBox>
   </children>
 </VBox>
