--- a/src/main/resources/themes/default/games_table.fxml
+++ b/src/main/resources/themes/default/games_table.fxml
@@ -8,13 +8,13 @@
   <columns>
     <TableColumn fx:id="passwordProtectionColumn" editable="false" maxWidth="20.0" minWidth="20.0" prefWidth="20.0"
                  resizable="false"/>
-    <TableColumn fx:id="mapPreviewColumn" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="36.0"
-                 resizable="false" text="%game.map"/>
-    <TableColumn fx:id="gameTitleColumn" minWidth="20.0" prefWidth="1000.0" text="%game.title"/>
-    <TableColumn fx:id="playersColumn" minWidth="20.0" prefWidth="100.0" text="%game.players"/>
-    <TableColumn fx:id="ratingColumn" minWidth="20.0" prefWidth="100.0" text="%game.rating"/>
-    <TableColumn fx:id="modsColumn" minWidth="20.0" prefWidth="100.0" text="%game.mods"/>
-    <TableColumn fx:id="hostColumn" minWidth="20.0" prefWidth="100.0" text="%game.host"/>
+    <TableColumn fx:id="mapPreviewColumn" editable="false" minWidth="-1.0" prefWidth="36.0" resizable="false"
+                 text="%game.map"/>
+    <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="20.0" prefWidth="1000.0" text="%game.title"/>
+    <TableColumn fx:id="playersColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.players"/>
+    <TableColumn fx:id="ratingColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.rating"/>
+    <TableColumn fx:id="modsColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.mods"/>
+    <TableColumn fx:id="hostColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.host"/>
   </columns>
   <columnResizePolicy>
     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
