--- a/src/main/resources/themes/default/login.fxml
+++ b/src/main/resources/themes/default/login.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -14,11 +13,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import java.lang.String?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" alignment="CENTER" fillWidth="false"
       xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.login.LoginController">
   <children>
-    <VBox alignment="CENTER" fillWidth="false">
+    <VBox alignment="CENTER" fillWidth="false" styleClass="login">
       <children>
         <ImageView fitHeight="160.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true" styleClass="login-icon">
           <image>
@@ -73,9 +71,9 @@
                         mnemonicParsing="false" onAction="#loginButtonClicked" text="%login.button.login"/>
                 <HBox alignment="CENTER" spacing="10.0">
                   <children>
-                    <Button disable="true" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                    <Button alignment="CENTER" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                             text="%login.forgot" HBox.hgrow="ALWAYS"/>
-                    <Button disable="true" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                    <Button alignment="CENTER" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                             text="%login.create" HBox.hgrow="ALWAYS"/>
                   </children>
                   <VBox.margin>
@@ -90,10 +88,6 @@
           </VBox.margin>
         </AnchorPane>
       </children>
-      <styleClass>
-        <String fx:value="login"/>
-        <String fx:value="tile"/>
-      </styleClass>
     </VBox>
   </children>
 </VBox>
