--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -14,82 +14,87 @@
 <?import javafx.scene.text.Text?>
 <?import java.lang.String?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" alignment="CENTER" fillWidth="false"
-      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.login.LoginController">
-  <children>
-    <VBox alignment="CENTER" fillWidth="false" styleClass="login">
-      <children>
-          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="">
-              <VBox.margin>
-                  <Insets bottom="50.0" top="70.0"/>
-              </VBox.margin>
-              <styleClass>
-                  <String fx:value="login-logo"/>
-                  <String fx:value="icon"/>
-              </styleClass>
-          </Text>
-        <AnchorPane maxHeight="1.7976931348623157E308" prefWidth="400.0">
-          <children>
-              <VBox fx:id="loginProgressPane" alignment="CENTER" layoutY="104.0" AnchorPane.bottomAnchor="0.0"
-                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <children>
-                  <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
-                <Label text="%login.progress.message">
-                  <VBox.margin>
-                      <Insets top="14.0"/>
-                  </VBox.margin>
-                </Label>
-                  <Pane VBox.vgrow="ALWAYS"/>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                          onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
-                  <VBox.margin>
-                      <Insets top="20.0"/>
-                  </VBox.margin>
-                </Button>
-              </children>
-            </VBox>
-              <VBox fx:id="loginFormPane" alignment="TOP_CENTER" layoutY="40.0" spacing="5.0"
-                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                    AnchorPane.topAnchor="0.0">
-              <children>
-                  <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308"
-                         maxWidth="1.7976931348623157E308" styleClass="hint" text="&lt;ErrorMessage&gt;"
-                         wrapText="true">
-                      <graphic>
-                          <Label styleClass="icon" text=""/>
-                      </graphic>
-                  <VBox.margin>
-                      <Insets bottom="5.0"/>
-                  </VBox.margin>
-                </Label>
-                  <TextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
-                  <PasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
-                  <CheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
-                            mnemonicParsing="false" text="%login.autoLogin">
-                  <VBox.margin>
-                      <Insets bottom="10.0" top="10.0"/>
-                  </VBox.margin>
-                </CheckBox>
-                  <Button fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                          mnemonicParsing="false" onAction="#loginButtonClicked" text="%login.button.login"/>
-                <HBox alignment="CENTER" spacing="10.0">
-                  <children>
-                      <Button alignment="CENTER" disable="true" maxWidth="1.7976931348623157E308"
-                              mnemonicParsing="false" text="%login.forgot" HBox.hgrow="ALWAYS"/>
-                      <Button alignment="CENTER" disable="true" maxWidth="1.7976931348623157E308"
-                              mnemonicParsing="false" text="%login.create" HBox.hgrow="ALWAYS"/>
-                  </children>
-                  <VBox.margin>
-                      <Insets top="20.0"/>
-                  </VBox.margin>
-                </HBox>
-              </children>
-            </VBox>
-          </children>
-          <VBox.margin>
-              <Insets bottom="20.0" left="18.0" right="18.0" top="20.0"/>
-          </VBox.margin>
-        </AnchorPane>
-      </children>
-    </VBox>
-  </children>
+      xmlns="http://javafx.com/javafx/8" fx:controller="com.faforever.client.login.LoginController">
+    <children>
+        <VBox alignment="CENTER" fillWidth="false" styleClass="login">
+            <children>
+                <Text strokeMiterLimit="0.0" strokeType="OUTSIDE" strokeWidth="0.0" text="">
+                    <VBox.margin>
+                        <Insets bottom="50.0" top="70.0"/>
+                    </VBox.margin>
+                    <styleClass>
+                        <String fx:value="login-logo"/>
+                        <String fx:value="icon"/>
+                    </styleClass>
+                </Text>
+                <AnchorPane maxHeight="1.7976931348623157E308" prefWidth="400.0">
+                    <children>
+                        <VBox fx:id="loginProgressPane" alignment="CENTER" layoutY="104.0" AnchorPane.bottomAnchor="0.0"
+                              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <children>
+                                <ProgressIndicator prefHeight="80.0" prefWidth="80.0"/>
+                                <Label text="%login.progress.message">
+                                    <VBox.margin>
+                                        <Insets top="14.0"/>
+                                    </VBox.margin>
+                                </Label>
+                                <Pane VBox.vgrow="ALWAYS"/>
+                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                        onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
+                                    <VBox.margin>
+                                        <Insets top="20.0"/>
+                                    </VBox.margin>
+                                </Button>
+                            </children>
+                        </VBox>
+                        <VBox fx:id="loginFormPane" alignment="TOP_CENTER" layoutY="40.0" spacing="5.0"
+                              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                              AnchorPane.topAnchor="0.0">
+                            <children>
+                                <Label fx:id="loginErrorLabel" minHeight="-Infinity" maxWidth="1.7976931348623157E308"
+                                       styleClass="hint" text="&lt;ErrorMessage&gt;" wrapText="true">
+                                    <graphic>
+                                        <Label styleClass="icon" text=""/>
+                                    </graphic>
+                                    <VBox.margin>
+                                        <Insets bottom="5.0"/>
+                                    </VBox.margin>
+                                </Label>
+                                <TextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
+                                <PasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
+                                <CheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT"
+                                          maxWidth="1.7976931348623157E308"
+                                          mnemonicParsing="false" text="%login.autoLogin">
+                                    <VBox.margin>
+                                        <Insets bottom="10.0" top="10.0"/>
+                                    </VBox.margin>
+                                </CheckBox>
+                                <Button fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
+                                        mnemonicParsing="false" onAction="#loginButtonClicked"
+                                        text="%login.button.login"/>
+                                <HBox alignment="CENTER" spacing="10.0">
+                                    <children>
+                                        <Button fx:id="forgotLogin" alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                                mnemonicParsing="false" text="%login.forgot" HBox.hgrow="ALWAYS"
+                                                onAction="#forgotLoginButtonClicked"/>
+                                        <Button fx:id="createAccountButton" alignment="CENTER"
+                                                maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                                onAction="#createAccountButtonClicked" text="%login.create"
+                                                HBox.hgrow="ALWAYS"/>
+
+                                    </children>
+                                    <VBox.margin>
+                                        <Insets top="20.0"/>
+                                    </VBox.margin>
+                                </HBox>
+                            </children>
+                        </VBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="20.0" left="18.0" right="18.0" top="20.0"/>
+                    </VBox.margin>
+                </AnchorPane>
+            </children>
+        </VBox>
+    </children>
 </VBox>
