--- a/src/main/resources/theme/vault/mod/mod_upload.fxml
+++ b/src/main/resources/theme/vault/mod/mod_upload.fxml
@@ -6,96 +6,90 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="modUploadRoot" styleClass="dialog-window"
-      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.mod.ModUploadController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="modUploadRoot" minHeight="100.0" minWidth="100.0" styleClass="dialog-window" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.mod.ModUploadController">
   <children>
-      <VBox fx:id="modInfoPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="100.0"
-            prefWidth="380.0" spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="modInfoPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="480.0" prefWidth="560.0" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-          <Label styleClass="h1" text="%modVault.upload.title"/>
           <HBox styleClass="info">
           <children>
-              <Label maxWidth="1.7976931348623157E308" styleClass="hint" text="%modVault.upload.hint" wrapText="true"
-                     HBox.hgrow="ALWAYS">
+              <Label maxWidth="1.7976931348623157E308" styleClass="hint" text="%modVault.upload.hint" wrapText="true" HBox.hgrow="ALWAYS">
                   <graphic>
-                      <Label contentDisplay="RIGHT" styleClass="icon" text=""/>
+                      <Label contentDisplay="RIGHT" styleClass="icon" text="" />
                   </graphic>
               </Label>
           </children>
         </HBox>
-          <Label fx:id="modNameLabel" alignment="CENTER" contentDisplay="TOP" maxWidth="1.7976931348623157E308"
-                 styleClass="h1" text="&lt;Name&gt;" wrapText="true" VBox.vgrow="ALWAYS">
+          <Label fx:id="modNameLabel" alignment="CENTER" contentDisplay="TOP" maxWidth="1.7976931348623157E308" styleClass="h2" text="&lt;Name&gt;" wrapText="true" VBox.vgrow="ALWAYS">
           <graphic>
-              <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true"
-                         preserveRatio="true"/>
+              <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" />
           </graphic>
         </Label>
-          <Label fx:id="descriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
-                 maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" VBox.vgrow="ALWAYS"/>
+            <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+               <content>
+                <Label fx:id="descriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" />
+               </content>
+            </ScrollPane>
         <GridPane hgap="10.0">
           <columnConstraints>
-              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
           </columnConstraints>
           <rowConstraints>
-              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
           <children>
-              <Label text="%modVault.upload.modVersion"/>
-              <Label text="%modVault.upload.modUid" GridPane.rowIndex="1"/>
-              <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
-                     text="&lt;Version&gt;" GridPane.columnIndex="1"/>
-              <Label fx:id="uidLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;UID&gt;"
-                     GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+              <Label text="%modVault.upload.modVersion" />
+              <Label text="%modVault.upload.modUid" GridPane.rowIndex="1" />
+              <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;Version&gt;" GridPane.columnIndex="1" />
+              <Label fx:id="uidLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;UID&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
           </children>
           <VBox.margin>
-              <Insets top="10.0"/>
+              <Insets top="10.0" />
           </VBox.margin>
         </GridPane>
         <ButtonBar prefHeight="40.0" prefWidth="200.0">
           <buttons>
-              <JFXButton defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
-                         text="%modVault.upload.uploadNow"/>
-              <JFXButton mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel"/>
+              <JFXButton defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked" text="%modVault.upload.uploadNow" />
+              <JFXButton mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel" />
           </buttons>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
         </ButtonBar>
       </children>
     </VBox>
-      <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
-            maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+      <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
       <children>
         <Label contentDisplay="TOP" styleClass="h2" text="%mapVault.upload.reading">
           <graphic>
-              <JFXSpinner prefHeight="100.0" prefWidth="100.0"/>
+              <JFXSpinner prefHeight="100.0" prefWidth="100.0" />
           </graphic>
         </Label>
       </children>
     </VBox>
-      <VBox fx:id="uploadProgressPane" alignment="CENTER" layoutX="20.0" layoutY="520.0"
-            maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="uploadProgressPane" alignment="CENTER" layoutX="20.0" layoutY="520.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-          <Label fx:id="uploadTaskTitleLabel" contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2"
-                 text="%mapVault.upload.uploading"/>
-          <JFXProgressBar fx:id="uploadProgressBar" maxWidth="1.7976931348623157E308" progress="0.0"/>
-          <Label fx:id="uploadTaskMessageLabel" text="&lt;bytes&gt;"/>
-          <JFXButton mnemonicParsing="false" onAction="#onCancelUploadClicked" text="%cancel"/>
+          <Label fx:id="uploadTaskTitleLabel" contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2" text="%mapVault.upload.uploading" />
+          <JFXProgressBar fx:id="uploadProgressBar" maxWidth="1.7976931348623157E308" progress="0.0" />
+          <Label fx:id="uploadTaskMessageLabel" text="&lt;bytes&gt;" />
+          <JFXButton mnemonicParsing="false" onAction="#onCancelUploadClicked" text="%cancel" />
       </children>
     </VBox>
-      <VBox fx:id="uploadCompletePane" alignment="CENTER" layoutX="20.0" layoutY="648.0"
-            maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="uploadCompletePane" alignment="CENTER" layoutX="20.0" layoutY="648.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-          <Label contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2" text="%modVault.upload.complete"/>
+          <Label contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2" text="%modVault.upload.complete" />
       </children>
     </VBox>
   </children>
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 </VBox>
